# FunkeyShifter

./: .gitignore  CMakeLists.txt  README.md  platformio.ini  sdkconfig.defaults
docs/: rdf-format.md  toolchain.md  usb-protocol.md
src/: CMakeLists.txt  funkey_ble.cpp  funkey_ble.hpp  funkey_boot.cpp  funkey_boot.hpp  funkey_physical.cpp  funkey_physical.hpp  funkey_protocol.cpp  funkey_protocol.hpp  funkey_report.cpp  funkey_report.hpp  funkey_usb.cpp  funkey_usb.hpp  main.c  main.cpp  main_resistor_tester_backup.c
stl/: README.md
tools/: decode_rdf.py  extract_funkey_images.py  funkey_live_control.py  funkey_portal_test.py  funkey_resistor.py
web/: README.md  next.config.mjs  package-lock.json  package.json  wrangler.jsonc
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/lib/: funkeys.ts  webble.ts
web/src/types/: web-bluetooth.d.ts
